--- a/app/partials/marvel_characters/details/details.html
+++ b/app/partials/marvel_characters/details/details.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="col-sm-5">
-      <h3>Total Comics Appeared in: {{character.comics.available}}</h3>
+      <h3>Total Comics Available Online: {{character.comics.available}}</h3>
       <ul class="list-group">
         <li
           class="list-group-item"
